--- a/ecommerce/templates/ecommerce-ui.yaml
+++ b/ecommerce/templates/ecommerce-ui.yaml
@@ -10,6 +10,12 @@ spec:
       activeService: ecommerce-ui-active
       previewService: ecommerce-ui-preview
       autoPromotionEnabled: false
+      trafficRouting:
+        istio:
+          virtualService:
+            name: ecommerce-gateway-routes
+            routes:
+              - primary
   selector:
     matchLabels:
       app: ecommerce-ui
